--- a/package.json
+++ b/package.json
@@ -11,20 +11,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/multer": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.0",
+    "sharp": "^0.30.6",
     "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.0.0",
     "@types/sequelize": "^4.28.13",
+    "@types/sharp": "^0.30.4",
     "@types/validator": "^13.7.3"
   }
 }
